- fully implemented history/recents feature - adjustments to Config - added LICENSE